[package]
name = "dutree"
version = "0.3.0"
authors = ["nacho <nacho@ownyourbits.com>", "Andy George"]
description = "Command line tool to analyze disk usage"
repository = "https://github.com/nachoparker/dutree"
categories = ["command-line-utilities"]
license = "GPL-3.0"
homepage = "https://github.com/nachoparker/dutree"
exclude = ["test/*"]
edition = "2024"

[dependencies]
getopts = "0.2.24"
regex = "1.11.3"
signal-hook = "0.3.18"
terminal_size = "0.4.3"
unicode-width = "0.2.1"
unicode-segmentation = "1.12.0"
